--- a/package.json
+++ b/package.json
@@ -20,12 +20,6 @@
     "express-session": "^1.17.3",
     "line-login": "^1.0.14",
     "line-notify-nodejs": "^1.0.1",
-    "path": "^0.12.7",
-    "puppeteer-cluster": "^0.23.0",
-    "puppeteer-extra": "^3.3.4",
-    "puppeteer-extra-plugin-adblocker": "^2.13.5",
-    "puppeteer-extra-plugin-stealth": "^2.11.1",
-    "puppeteer-proxy": "^2.1.2",
-    "request": "^2.88.2"
+    "puppeteer": "^19.0.0"
   }
 }
